--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@
 			font-size: 24px;
 			color: #005ba9;
 			margin-bottom: 15px;
+			font-family: "Lato light", Verdana, Sans-Serif;
 		}
 
 		#datepicker {
